# meta-hacker-cup

./: .gitignore  README.md  pyproject.toml
src/meta_hacker_cup/: __init__.py
src/meta_hacker_cup/y2024/round_1/: a.py  b.py  d.py
src/meta_hacker_cup/y2024/round_2/: a1.py  a2.py  b.py  c.py
